# borgmatic-ui

./: CMakeLists.txt  README.md
include/: BackupConfig.h  BackupConfig.inc  BackupListModel.h  BackupWorker.h  BorgmaticBackupWorker.h  BorgmaticManager.h  ConfigTab.h  DesktopServicesWrapper.h  FileDialogWrapper.h  MainWindow.h  configtab.h  mainwindow.h
src/: BackupConfig.cpp  BackupListModel.cpp  BackupWorker.cpp  BorgmaticBackupWorker.cpp  BorgmaticManager.cpp  ConfigTab.cpp  MainWindow.cpp  configtab.cpp  main.cpp  mainwindow.cpp
test/: CMakeLists.txt  mocks.h  testBackupConfig.cpp  testBackupListModel.cpp  testBorgmaticManager.cpp  testConfigTab.cpp  testMainWindow.cpp  test_helper.h  test_main.cpp
ui/: mainwindow.ui  tabContent.ui
